[update] update detail

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1220,8 +1220,8 @@
   "take_picture": "Take a photo",
   "you": "You",
   "creator": "Creator",
-  "please_read_and_agree_wallet_policy": " Pease read and agree to the Terms of Service for Hyperion Wallet before using Titan decentralized wallet ",
-  "please_read_and_agress_dex_policy": " Pease read and agree to the Terms of Service for HSWAP before using the function ",
+  "please_read_and_agree_wallet_policy": " Please read and agree to the Terms of Service for Hyperion Wallet before using Titan decentralized wallet ",
+  "please_read_and_agress_dex_policy": " Please read and agree to the Terms of Service for HSWAP before using the function ",
   "agree_and_continue": "Agree and continue",
   "i_hava_read_and_agree_policy": " I have read and agree to it. ",
   "still_need_secs": "{count} seconds are needed",
