--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1254,5 +1254,8 @@
   "cancel_delegate_no_atlas_reward_confirm_cancel": "撤销抵押后将不再获得Atlas节点出块奖励，当前为止获得的奖励，将在Atlas节点主领取奖励时发送至您的钱包，撤销之后可以再次抵押，确定要撤销吗？",
   "staking": "抵押",
   "atlas_node": "Atlas节点",
-  "atlas_node_intro": "Atlas网络层由Atlas节点组成，并按照抵押量降序选出88个出块节点进行验证、出块、清算、并获取出块奖励。"
+  "atlas_node_intro": "Atlas网络层由Atlas节点组成，并按照抵押量降序选出88个出块节点进行验证、出块、清算、并获取出块奖励。",
+  "my_map3_nodes": "我的Map3节点",
+  "my_atlas_nodes": "我的Atlas节点",
+  "atlas_node_list": "Atlas节点列表"
 }
