add error translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1261,5 +1261,49 @@
   "atlas_node_intro": "Atlas网络层由Atlas节点组成，并按照抵押量降序选出88个出块节点进行验证、出块、清算、并获取出块奖励。",
   "my_map3_nodes": "我的Map3节点",
   "my_atlas_nodes": "我的Atlas节点",
-  "atlas_node_list": "Atlas节点列表"
+  "atlas_node_list": "Atlas节点列表",
+  "transaction_contained_within_pool": "already known",
+  "sender_signature_error": "invalid sender",
+  "gas_price_too_low": "transaction underpriced",
+  "replacement_transaction_underpriced": "replacement transaction underpriced",
+  "gas_limit_too_large": "exceeds block gas limit",
+  "transaction_value_disable": "negative value",
+  "oversized_data": "oversized data",
+  "map3_node_no_exist": "map3 node does not exist",
+  "map3_node_identity_exists": "map3 node identity exists",
+  "map3_node_key_exists": "map3 node key exists",
+  "is_not_map3_operator": "invalid map3 node operator",
+  "map3_delegation_no_exist": "microdelegation does not exist",
+  "invalid_map3_status_delegation": "invalid map3 node status for delegation",
+  "invalid_map3_status_undelegate": "invalid map3 node status to unmicrodelegate",
+  "no_balance_to_undelegate": "insufficient balance to unmicrodelegate",
+  "map3_delegation_still_locked": "microdelegation still locked",
+  "map3_not_to_terminate": "not allow to terminate map3 node",
+  "delegation_amount_too_small": "delegation amount too small",
+  "not_edit_terminated_map3": "not allow to edit terminated map3 node",
+  "not_renew_map3_node": "not allow to renew map3 node",
+  "not_change_renewal_decision": "not allow to change renewal decision",
+  "non_operator_not_update_commission": "not allow to update commission by non-operator",
+  "map3_not_renewal_any_more": "map3 node not renewal any more",
+  "invalid_map3_status_restake": "invalid map3 node status to restake",
+  "map3_node_already_restaked": "map3 node already restaked",
+  "validator_address_not_equal_map3_restaked": "validator address not equal to the address of the validator map3 already restaked to",
+  "statedb_no_provided": "no stateDB was provided",
+  "chaincontext_no_provided": "no chain context was provided",
+  "epoch_no_provided": "no epoch was provided",
+  "block_num_no_provided": "no block number was provided",
+  "amount_not_be_negative": "amount can not be negative",
+  "invalid_signer_transaction": "invalid signer for staking transaction",
+  "validator_identity_exists": "validator identity exists",
+  "slot_keys_was_duplicates": "slot keys can not have duplicates",
+  "no_enough_balance_stake": "insufficient balance to stake",
+  "change_commission_rate_more_change_rate": "change on commission rate can not be more than max change rate within the same epoch",
+  "no_rewards_to_collect": "no rewards to collect",
+  "validator_not_exist": "validator does not exist",
+  "redelegation_not_exist": "redelegation does not exist",
+  "invalid_validator_operator": "invalid validator operator",
+  "atlas_node_more_max_delegation": "total delegation can not be bigger than max_total_delegation",
+  "no_balance_undelegate": "insufficient balance to undelegate",
+  "atlas_creator_delegation_little": "self delegation too little",
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
 }
