--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1257,5 +1257,49 @@
   "atlas_node_intro": "Atlas网络层由Atlas节点组成，并按照抵押量降序选出88个出块节点进行验证、出块、清算、并获取出块奖励。",
   "my_map3_nodes": "我的Map3节点",
   "my_atlas_nodes": "我的Atlas节点",
-  "atlas_node_list": "Atlas节点列表"
+  "atlas_node_list": "Atlas节点列表",
+  "transaction_contained_within_pool": "交易已经包含在队列中了",
+  "sender_signature_error": "发送者签名异常",
+  "gas_price_too_low": "交易价格过低",
+  "replacement_transaction_underpriced": "覆盖交易价格过低",
+  "gas_limit_too_large": "燃料值过大",
+  "transaction_value_disable": "转账价值为负数",
+  "oversized_data": "负载数据过大",
+  "map3_node_no_exist": "Map3节点不存在",
+  "map3_node_identity_exists": "Map3节点号已存在",
+  "map3_node_key_exists": "Map3节点BLS KEY已存在",
+  "is_not_map3_operator": "非Map3创建人",
+  "map3_delegation_no_exist": "Map3抵押不存在",
+  "invalid_map3_status_delegation": "Map3节点当前状态不允许抵押",
+  "invalid_map3_status_undelegate": "Map3节点当前状态不允许取消抵押",
+  "no_balance_to_undelegate": "申请取消抵押的金额大于余额",
+  "map3_delegation_still_locked": "Map3抵押仍在锁定周期",
+  "map3_not_to_terminate": "不允许中止Map3节点",
+  "delegation_amount_too_small": "抵押金额太低",
+  "not_edit_terminated_map3": "不允许编辑已中止的Map3节点",
+  "not_renew_map3_node": "不允许续期Map3节点",
+  "not_change_renewal_decision": "不允许更改续期决定",
+  "non_operator_not_update_commission": "非创建者不允许更新费率",
+  "map3_not_renewal_any_more": "该节点不再续期",
+  "invalid_map3_status_restake": "Map3状态不允许复抵押",
+  "map3_node_already_restaked": "Map3节点已经复抵押",
+  "validator_address_not_equal_map3_restaked": "Atlas节点与已复抵押节点地址不一致",
+  "statedb_no_provided": "StateDB为空",
+  "chaincontext_no_provided": "ChainContext为空",
+  "epoch_no_provided": "纪元为空",
+  "block_num_no_provided": "区块高度为空",
+  "amount_not_be_negative": "金额不允许为负数",
+  "invalid_signer_transaction": "非法的交易签名",
+  "validator_identity_exists": "Atlas节点号已存在",
+  "slot_keys_was_duplicates": "Atlas节点BLS KEY重复",
+  "no_enough_balance_stake": "余额不足以抵押",
+  "change_commission_rate_more_change_rate": "更新的费率大于允许最大更改量",
+  "no_rewards_to_collect": "无可提取收益",
+  "validator_not_exist": "Atlas节点不存在",
+  "redelegation_not_exist": "复抵押不存在",
+  "invalid_validator_operator": "非Atlas节点创建者",
+  "atlas_node_more_max_delegation": "Atlas节点总抵押量大于允许最大抵押量",
+  "no_balance_undelegate": "申请取消复抵押的金额大于余额",
+  "atlas_creator_delegation_little": "Atlas创建者抵押金额太低",
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
 }
