--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -527,7 +527,7 @@
   "my_initiated_map_contract": "My Map3 contract",
   "please_create_import_wallet": "Please create/import wallet",
   "my_join_map_contract": "My Map3 contract",
-  "wallet_account": "wallet account",
+  "wallet_account": "Wallet account",
   "create_map_node_must_have_block_account": "A crypto-wallet account is compulsory to create a Map staking node",
   "undefind_error": "unknown error",
   "ten_thousand": "ten thousand",
@@ -1162,7 +1162,7 @@
   "please_enter_node_description": "Please enter a description for your node",
   "create_map3_node": "Create a Map3 node",
   "detailed_introduction": "Details",
-  "active_still_need": "HYN is needed",
+  "active_still_need": "HYN is needed ",
   "manage_fee_range": "Commission should be from{min}%to{max}%",
   "optional_input": "Optional",
   "submit_create": "Submit",
