--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,7 +38,6 @@
   "manually_refresh": "Refresh Manually",
   "share": "Share",
   "tips": "Tips",
-  "create": "Create",
   "refresh_keypaire_message": "Refreshing your public key address will fail to decrypt the received address, still continue to refresh?",
   "cancel": "Cancel",
   "confirm": "Confirm",
@@ -96,7 +95,6 @@
   "foods": "Foods",
   "hotel": "Hotel",
   "attraction": "Travel",
-  "parking": "Parking",
   "gas_station": "Gas Station",
   "bank": "Bank",
   "supermarket": "Supermarket",
@@ -282,10 +280,10 @@
   "scan_name_gps": "GPS",
   "scan_name_start": "Start",
   "scan_name_title": "Signal scan",
-  "latest_version_tip": "Already the latest version",
   "scan_signal_upload_protocol": "Privacy Policy",
   "scan_exit_tips": "Scanning, are you sure you want to quit?",
   "scan_hyn_is_empty": "No HYN wallet",
+  "latest_version_tip": "Already the latest version",
   "scan_finish": "Scan complete",
   "scan_ing_func": "Scanning {scanName}",
   "scan_upload_error": "Upload failed",
@@ -296,10 +294,10 @@
   "selected_area": "Select region",
   "what_region_use_titan": "What's the region do you use {app}?",
   "select_region_tip": "Please select region",
-  "data_position_adding": "Pending",
   "data_save": "Save",
   "input_valid_address": "Please enter a valid recipient address",
   "transfer_confirm": "Transfer confirmation",
+  "data_position_adding": "Pending",
   "select_category": "Select category",
   "select_position": "Select position",
   "user_defined_time_format_hint": "User defined time format",
@@ -466,6 +464,7 @@
   "broadcase_success": "Broadcast successful",
   "map_node_broadcase_success_description": "The message of {actionType} Map3 node staking contract has been broadcasted to the blockchain network, which will take 5-30 min to mine and verify.",
   "transfer_broadcase_success_description": "Transaction has been broadcasted to the network, it might take 5-30 min. to verify",
+  "create": "Create",
   "map_node_contract_address": "Map3 node contract ({receiverAddress})",
   "launch": "initiate",
   "remain_day_has_colon": "remaining：{remain} days",
@@ -507,8 +506,8 @@
   "exceed_the_limit": "Exceeded limit",
   "fund_password_error": "Fund password error",
   "param_error": "The parameter is incorret",
-  "insufficient_permission": "no permission",
   "unauthorized": "unauthorized",
+  "insufficient_permission": "no permission",
   "content_conflict": "Content does not match",
   "no_content": "Null",
   "network_error": "Network error",
@@ -527,7 +526,7 @@
   "my_initiated_map_contract": "My Map3 contract",
   "please_create_import_wallet": "Please create/import wallet",
   "my_join_map_contract": "My Map3 contract",
-  "wallet_account": "wallet account",
+  "wallet_account": "Wallet account",
   "create_map_node_must_have_block_account": "A crypto-wallet account is compulsory to create a Map staking node",
   "undefind_error": "unknown error",
   "ten_thousand": "ten thousand",
@@ -552,8 +551,6 @@
   "join_delegate": "Join delegation",
   "manager_tip_hyn": "commission fee (HYN)",
   "withdrawRefund": "Apply to refund",
-  "join_map3_level_min": "• Must reach【{levelName}】level to initiate a node",
-  "referrer_reward_tip": "Need to return 5% of rewards to your referrer when the node is due",
   "contract_had_stop": "Contract is due",
   "contract_had_expired": "Contract is due",
   "create_contract_only_one_hint": "• A wallet can create one contract only. Contract can be renewed when is due.",
@@ -577,7 +574,6 @@
   "no_pengding_node_contract_hint": "No pending node contract\nYou can create a contract",
   "delegation_full_will_active_hint": "Crowdfund successful, will launch node",
   "expire_date": "Deadline",
-  "no_hash_found": "Transaction hash not found",
   "contract_share_content": "\"{who}\"found{appName}Hyperion{nodeName}contract，you are invited to check it out！",
   "reset_input_contract": "Renew contract",
   "reset_output_contract": "Reset withdrawal",
@@ -639,7 +635,6 @@
   "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
   "delegator_not_exist_hint": "delegator not exist",
   "not_time_to_collect_hint": "not time to collect",
-  "cannot_fint_wallet": "can't fine wallet",
   "warning_no_sceenshot": "Please do not share and store screenshots, as this may be collected by third-party malware and cause asset loss",
   "no_screenshot_dialog_confirm": "confirm",
   "no_screenshot_dialog_cancel": "cancel",
@@ -667,21 +662,15 @@
   "atlas_consensus_node": "Atlas consensus node",
   "consensus_guarantee_for_hyberion": "Provide consensus support to Hyperion ecosystem",
   "home_atlas_description": "Atlas is a high-performance spatial consensus blockchain that supports world-scale map service based on Elastic Spatial Sharding. It aims to solve spatial service requirements such as map asset transactions and validation, with special features of censorship resistance, open participation and fault-tolerance. Atlas will empower Hyperion to build decentralized global map economy that serves 10 billion users when built.\n\nAtlas will achieve scalability, low-latency, low-cost, privacy preservation, extensibility and interoperability from technological perspective to underpin massive location and search requests. Users will improve network security and efficiency, and get HYN rewards by deploying Atlas nodes. The details will be announced after the mainnet launch, but Atlas node is interconnected with Map3 nodes.",
-  "about_atlas_node": "Atlas consensus node",
   "in_progress": "In progress...",
   "node_not_create_by_app_withdraw_fail": "The node is not created from {app_name}, failed to withdraw",
   "not_exceed_remain_share": "Do not exceed remaining quota",
-  "share_contract": "Share contract",
   "scan_qr_code_detail": "Scan QR Code for details",
-  "latest_boot_node": "Latest initiated node",
-  "see_more": "Check for more",
   "show_qr_code": "Show QR Code",
   "legal_address_starting_1_or_bc_or_3": "Please input a valid receiver address initiating with 1, bc or 3",
-  "save_update": "Save your update",
   "wallet_address_copied": "Wallet address copied",
   "wallet_address": "Wallet address",
   "face_fingerprint_password": "Face/fingerprint and password",
-  "update_success": "Updated!",
   "update_error": "Update error",
   "has_unconfirm_btc_wait": "You have a pending BTC transaction, please try again later",
   "pending": "Pending",
@@ -716,7 +705,7 @@
   "non_secret_open_success": "Password-free payment enabled",
   "non_secret_open_fail": "Failed to unlock password-free payment",
   "use_face_verify": "Verify with face recognition",
-  "cannot_fint_wallet": "wallet not found",
+  "cannot_fint_wallet": "can't fine wallet",
   "wallet_test": "Wallet test",
   "active_btc": "Activate BTC",
   "show_qr": "Show QR Code",
@@ -808,7 +797,7 @@
   "restaurant": "Gourmet",
   "lodging": "Hotel",
   "tourist_attraction": "Tourist attraction",
-  "parking": "Parking lot",
+  "parking": "Parking",
   "grocery_or_supermarket": "Grocery store",
   "shopping_mall": "Shopping mall",
   "net_bar": "Internet Cafe",
@@ -848,7 +837,6 @@
   "verify_location_hint": "Zoom and move the selected location on the map",
   "please_edit_location_hint": "Please edit location map location",
   "support_format": "Support jpg, jpeg, png, gif, heic, webp formats",
-  "net_error_hint": "Network error",
   "dialog_title_delete_wallet_confirm": "Confirm delete wallet",
   "dialog_content_delete_wallet_confirm": "All data of the wallet on the mobile phone will be deleted, please make sure that the wallet mnemonic phrase has been backed up, otherwise it cannot be retrieved!",
   "kline_period_15min": "15 min.",
@@ -862,7 +850,6 @@
   "kline_period_1mon": "1 mon.",
   "kline_period_depth": "Depth",
   "kline_period_more": "More",
-  "kline_24h_high": "High",
   "kline_24h_low": "Low",
   "kline_24h_high": "High",
   "kline_state_main": "Main",
@@ -1012,7 +999,6 @@
   "wallet_name_do_not_contain_space": "Do not include space",
   "exchange_change_wallet": "Switch wallet",
   "exchange_logout": "sign out",
-  "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
   "net_error_hint": "Network error",
   "atlas_current_age": "Current epoch",
   "block_height": "Block height",
@@ -1035,7 +1021,7 @@
   "important_hint": "Note",
   "got_it": "Got it",
   "wallet_show_atlas_alert": "Atlas HYN has been available now. Please swap your ERC20 HYN before November 2nd, 2020 (GMT+8). ERC20 will be no longer valid for mainnet function ",
-  "exchange_logout_hint": "Your authorization will be expired if you log out, continue?",
+  "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
   "bio_auth_expired_hint": "Bio authenticity is expired, please enter your password ",
   "map3_main_page_title": "Map3 nodes",
   "dex_account_error": "Data error",
@@ -1162,7 +1148,7 @@
   "please_enter_node_description": "Please enter a description for your node",
   "create_map3_node": "Create a Map3 node",
   "detailed_introduction": "Details",
-  "active_still_need": "HYN is needed",
+  "active_still_need": "HYN is needed ",
   "manage_fee_range": "Commission should be from{min}%to{max}%",
   "optional_input": "Optional",
   "submit_create": "Submit",
@@ -1305,5 +1291,6 @@
   "atlas_node_more_max_delegation": "total delegation can not be bigger than max_total_delegation",
   "no_balance_undelegate": "insufficient balance to undelegate",
   "atlas_creator_delegation_little": "self delegation too little",
-  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
+  "about_atlas_node": "Atlas consensus node"
 }
