--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -41,7 +41,6 @@
   "refresh_keypaire_message": "공유 키 주소를 새로 고침 하면  이전에 받았던 위치의 암호화 문서는 영구적으로 복구 되지 않습니다!  새로 고침을 계속 하시겠습니까? ",
   "cancel": "취소",
   "confirm": "확정",
-  "share_qr_code": "공유 키 QR 코드공유",
   "share_fail": "공유 오류",
   "share_location": "위치 공유",
   "driving": "운전",
@@ -95,7 +94,6 @@
   "foods": "음식점",
   "hotel": "호텔",
   "attraction": "관광지",
-  "parking": "주차장",
   "gas_station": "주유소",
   "bank": "은횅",
   "supermarket": "슈퍼마켓",
@@ -281,10 +279,10 @@
   "scan_name_gps": "GPS",
   "scan_name_start": "START",
   "scan_name_title": "TITLE",
-  "latest_version_tip": "이미 최신버전입니다",
   "scan_signal_upload_protocol": "신호 업로드 프로토콜",
   "scan_exit_tips": "스캔 중, 종료 확인",
   "scan_hyn_is_empty": "HYN 지갑이 비어 있습니다",
+  "latest_version_tip": "이미 최신버전입니다",
   "scan_finish": "스캔 완료",
   "scan_ing_func": "현재 스캔 중 {scanName} ",
   "scan_upload_error": "업로드 실패",
@@ -295,10 +293,10 @@
   "selected_area": "선택된 지역",
   "what_region_use_titan": "{app} 앱을 어디에 사용합니까",
   "select_region_tip": "请选择地区",
-  "data_position_adding": "데이터 위치 추가",
   "data_save": "지역을 선택하세요",
   "input_valid_address": "합법적인 수신자주소를 입력하십시오",
   "transfer_confirm": "전송 확인",
+  "data_position_adding": "데이터 위치 추가",
   "select_category": "카테고리 선택",
   "select_position": "위치 선택",
   "user_defined_time_format_hint": "사용자 지정 영업 시간",
@@ -502,7 +500,6 @@
   "expected_output_hyn": "예상되는 산출 HYN",
   "create_time": "생성 시간",
   "can_withdraw_fifty_reward": "50% 장려금 인출 가능",
-  "expire_date": "만기일",
   "extract_time": "인출 시간",
   "extracting": "인출 중",
   "exceed_the_limit": "한도 초과",
@@ -575,6 +572,7 @@
   "your_last_output_to_contract_func": "당신의 최신 인출: {input}, {task_pending}",
   "no_pengding_node_contract_hint": "가동 대기중인 노드 계약이 없습니다. \n새로운 계약을 만들수가 있습니다.",
   "delegation_full_will_active_hint": "저당이 만족되여 곧 작동됩니다.",
+  "expire_date": "만기일",
   "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}节点，邀请你前往围观！",
   "reset_input_contract": "재투입",
   "reset_output_contract": "재인출",
@@ -636,7 +634,7 @@
   "not_allow_to_collect_in_pending_state_hint": "확인되지 않은 상태에서 수령을 금지합니다.",
   "delegator_not_exist_hint": "수권인이 존재하지 않습니다.",
   "not_time_to_collect_hint": "수령할 시간이 없습니다.",
-  "cannot_fint_wallet": "로컬 지갑을 찾을수가 없습니다.",
+  "forgot_password": "비밀번호 분실",
   "advanced_mode": "고급 모드",
   "software_agreement": "소프트웨어 협의",
   "save_qr_code": "QR코드번호 저장",
@@ -660,17 +658,12 @@
   "in_progress": "진행중",
   "node_not_create_by_app_withdraw_fail": "이 노드는 {app_name}에서 만든것이 아니므로 실패하였습니다.",
   "not_exceed_remain_share": "잔여 할당량을 초과할수 없습니다.",
-  "share_contract": "계약 공유",
   "scan_qr_code_detail": "QR코드 번호를 스캔한후 상세정보 보기",
-  "latest_boot_node": "최신 작동 노드",
-  "see_more": "더 보기",
   "show_qr_code": "qr코드번호 보기",
   "legal_address_starting_1_or_bc_or_3": "1,bc,혹은3으로 시작되는 합법적인 접수 주소를 입력하세요.",
-  "save_update": "업데이트 저장",
   "wallet_address_copied": "지갑 주소 복사 성공",
   "wallet_address": "지갑 주소",
   "face_fingerprint_password": "얼굴/지문과 비밀번호",
-  "update_success": "업데이트 성공",
   "update_error": "업데이트 오류가 발생했습니다.",
   "has_unconfirm_btc_wait": "아직 확인하지 않은 비트코인 계좌 이체가 있습니다.잠시후 다시 시도해주십시요.",
   "pending": "확인중",
@@ -716,21 +709,6 @@
   "to_be_confirmed": "확인중",
   "unconfirmed_btc_transfer_please_try_again_later_hint": "미확인 상태의 비트코인 계좌 이체가 있습니다.잠시후 다시 시도해주십시요.",
   "transaction_detail_state_func": "확인{transactionDetailState}회",
-  "setting_payment_password": "결제 비밀번호를 설정하십시오",
-  "set_bio_auth_success": "성공적으로 열다",
-  "set_bio_auth_fail": "열지 못했습니다",
-  "unlock_decrypted_location": "암호화 된 위치를 잠금 해제",
-  "update_wallet": "지갑 업데이트",
-  "delete_wallet": "지갑 삭제",
-  "bio_auth_title_face": "당신의 얼굴을 확인하십시오",
-  "bio_auth_title_fingerprint": "지문을 확인하십시오",
-  "forgot_password": "비밀번호 분실",
-  "indoor": "옥내",
-  "most": "대부분",
-  "ps_gas_hint": "추신 : 전송 실패를 피하기 위해 시스템 기본 GAS 값이 너무 커서 체인에서 실제 GAS 공제가 우선합니다.",
-  "join_map3_level_min": "• 레벨은 반드시{levelName}보다 크거나 동일해야 계약을 새로 만들수 있습니다.",
-  "referrer_reward_tip": "• 노드 계약기간이 만료되면 당신은 직속 추천인 계약 총수익의 5%를 그의 추천 보상으로 주어야 합니다.",
-  "no_hash_found": "거래 하시를 발견하지 못했습니다.",
   "add_position_image_title_1": "촬영시 점포의 명칭이 정확하고 명확해야 하며 간판과 출입구 전면도 촬영해야 한다.",
   "add_position_image_title_2": "촬영시 점포의 좌우 이웃 상가 점포도 정확하게 촬영해야 한다.",
   "add_position_image_title_3": "사진 유형은 실외와 실내로 구분되며 실외는 필수항이고 실내는 선택항이며 양자를 다 구비할 경우 우수 POI로 선정될 가능성이 더 높습니다.",
@@ -760,6 +738,9 @@
   "add_location_data_please_confirm_actual_situation_toast": "지점 데이터를 추가중이니 실제 정황에 따라 지점과 관련된 자료를 정확하게 입력하였는지 확인해주세요.",
   "confirm_location": "위치 확인",
   "balance_is_not_enough_to_transfer_toast_func": "당신의 계좌 잔고 금액은 노드 총수익의5%(≈ {withdrawnStr})를 직접 추천인에게 조달하기에는 부족하므로 우선 잔고 금액을 충전해주십시요.",
+  "latest_boot_node": "최신 작동 노드",
+  "see_more": "더 보기",
+  "share_contract": "계약 공유",
   "scan_qr_code_for_details": "QR코드 스캔후 상세정보 보기",
   "cannot_exceed_the_remaining_share": "잔여 분액을 초과해서는 안된다.",
   "node_not_created_in_x_extraction_failed": "이 노드는{name}가 만든것이 아니므로 인출에 실패하였습니다.",
@@ -808,6 +789,7 @@
   "restaurant": "미식",
   "lodging": "호텔",
   "tourist_attraction": "관광지",
+  "parking": "주차장",
   "grocery_or_supermarket": "슈퍼마켓",
   "shopping_mall": "쇼핑몰",
   "net_bar": "PC방",
@@ -829,15 +811,22 @@
   "task_failed": "미션 실패",
   "task_is_not_finish": "미션 미 완성",
   "false_data_at_location_detail_toast": "당신이 제출한 지점은 허위 데이터가 존재합니다.",
-  "wallet_password_decrypt": "지갑 비밀번호를 사용하여 해독",
   "you_still_have_unfinished_tasks_detail_toast": "화이팅하세요,아직 완성하지 못한 미션이 있습니다.",
+  "wallet_password_decrypt": "지갑 비밀번호를 사용하여 해독",
+  "setting_payment_password": "결제 비밀번호를 설정하십시오",
+  "set_bio_auth_success": "성공적으로 열다",
+  "set_bio_auth_fail": "열지 못했습니다",
+  "unlock_decrypted_location": "암호화 된 위치를 잠금 해제",
+  "update_wallet": "지갑 업데이트",
+  "delete_wallet": "지갑 삭제",
+  "bio_auth_title_face": "당신의 얼굴을 확인하십시오",
+  "bio_auth_title_fingerprint": "지문을 확인하십시오",
   "indoor": "옥내",
   "most": "대부분",
   "ps_gas_hint": "추신 : 전송 실패를 피하기 위해 시스템 기본 GAS 값이 너무 커서 체인에서 실제 GAS 공제가 우선합니다.",
   "verify_location_hint": "지도에서 선택한 위치를 확대하고 이동합니다",
   "please_edit_location_hint": "위치 맵 위치를 편집하십시오",
   "support_format": "jpg, jpeg, png, gif, heic, webp 형식 지원",
-  "net_error_hint": "네트워크 오류",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
   "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
   "kline_period_15min": "15 분",
@@ -851,7 +840,6 @@
   "kline_period_1mon": "1 월",
   "kline_period_depth": "깊이지도",
   "kline_period_more": "더보기",
-  "kline_24h_high": "높음",
   "kline_24h_low": "낮음",
   "kline_24h_high": "높음",
   "kline_state_main": "기본 사진",
@@ -1000,7 +988,6 @@
   "wallet_name_do_not_contain_space": "공백을 포함하지 마십시오",
   "exchange_change_wallet": "지갑 변경",
   "exchange_logout": "로그 아웃",
-  "exchange_logout_hint": "승인 상태를 종료하려고합니다. 종료 하시겠습니까?",
   "net_error_hint": "네트워크 오류",
   "atlas_current_age": "Current epoch",
   "block_height": "Block height",
@@ -1023,7 +1010,7 @@
   "important_hint": "Note",
   "got_it": "Got it",
   "wallet_show_atlas_alert": "Atlas HYN has been available now. Please swap your ERC20 HYN before November 2nd, 2020 (GMT+8). ERC20 will be no longer valid for mainnet function ",
-  "exchange_logout_hint": "Your authorization will be expired if you log out, continue?",
+  "exchange_logout_hint": "승인 상태를 종료하려고합니다. 종료 하시겠습니까?",
   "bio_auth_expired_hint": "Bio authenticity is expired, please enter your password ",
   "map3_main_page_title": "Map3 nodes",
   "dex_account_error": "Data error",
@@ -1150,7 +1137,7 @@
   "please_enter_node_description": "Please enter a description for your node",
   "create_map3_node": "Create a Map3 node",
   "detailed_introduction": "Details",
-  "active_still_need": "HYN is needed",
+  "active_still_need": "HYN is needed ",
   "manage_fee_range": "Commission should be from{min}%to{max}%",
   "optional_input": "Optional",
   "submit_create": "Submit",
@@ -1292,5 +1279,6 @@
   "atlas_node_more_max_delegation": "Atlas节点总抵押量大于允许最大抵押量",
   "no_balance_undelegate": "申请取消复抵押的金额大于余额",
   "atlas_creator_delegation_little": "Atlas创建者抵押金额太低",
-  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
+  "about_atlas_node": "Atlas consensus node"
 }
