--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -95,7 +95,6 @@
   "foods": "美食",
   "hotel": "酒店",
   "attraction": "景点",
-  "parking": "停车场",
   "gas_station": "加油站",
   "bank": "银行",
   "supermarket": "超市",
@@ -121,9 +120,9 @@
   "create_wallet_name_label": "钱包名称",
   "input_wallet_name_hint": "请输入钱包名称",
   "input_wallet_name_length_hint": "请输入6位以内的名称",
-  "create_wallet_password_label": "支付密码",
+  "create_wallet_password_label": "钱包密码",
   "input_wallet_password_length_hint": "请输入至少6位的密码",
-  "reinput_wallet_password_label": "确认支付密码",
+  "reinput_wallet_password_label": "确认密码",
   "input_password_again_hint": "请再次输入密码",
   "password_not_equal_hint": "密码不一致",
   "input_confirm_wallet_password_hint": "请再次输入支付密码",
@@ -273,7 +272,7 @@
   "please_open_wifi": "WIFI信号可以辅助三角定位，请开启设备WIFI",
   "require_location": "授权申请",
   "require_location_message": "无法获得位置信息，请你授予使用定位权限。",
-  "open_location_service": "打开定位服务",
+  "open_location_service": "请授予定位服务权限",
   "open_location_service_message": "定位服务已关闭，请开启",
   "scan_name_wifi": "WiFi",
   "scan_name_cellular": "基站",
@@ -332,7 +331,7 @@
   "please_enter_postal_code": "请输入邮政编码",
   "click_auto_get_hint": "点击自动获取",
   "scene_photographed": "现场拍照",
-  "please_select_category_hint": "请选择类别",
+  "please_select_category_hint": "请选择地点类别",
   "please_add_business_hours_hint": "请添加营业时间",
   "add_failed_hint": "添加失败!",
   "name": "名称",
@@ -354,8 +353,8 @@
   "no_category": "暂无相关类别",
   "hot_search": "热门搜索：",
   "add_failed_exist_hint": "该地点已存在，请添加其他地点",
-  "epidemic_map": "新冠状肺炎疫情地图",
-  "epidemic_map_desc": "新型冠状肺炎疫情",
+  "epidemic_map": "新型肺炎疫情地图",
+  "epidemic_map_desc": "新型肺炎疫情",
   "ncov_guide": "防疫资讯",
   "isolation_yes": "是",
   "isolation_no": "否",
@@ -450,9 +449,9 @@
   "withdraw_reward": "提取奖励50%",
   "expire_end": "期满结束",
   "truely_date_accurate": "具体以实际日期为准",
-  "confirm_mortgage": "确定抵押",
+  "confirm_mortgage": "确认抵押",
   "no_enough_hyn_fail_invest_extract": "•  投入后，若在规定期限内Map3节点不能积攒够启动所需HYN，则本次节点启动失败。已投入的HYN可自行取回。",
-  "mortgage_quantity_standard": "•  最终抵押hyn数量以链上实际交易数量为准。",
+  "mortgage_quantity_standard": "•  最终抵押HYN数量以链上实际交易数量为准。",
   "invest_cant_undo": "•  投入节点后不可撤销。",
   "account_flow": "节点记录",
   "total": "总额",
@@ -507,7 +506,7 @@
   "exceed_the_limit": "超过限制",
   "fund_password_error": "资金密码错误",
   "param_error": "参数错误",
-  "unauthorized": "未授权",
+  "unauthorized": "未授权，请重新登录",
   "insufficient_permission": "权限不足",
   "content_conflict": "内容冲突",
   "no_content": "无内容",
@@ -554,7 +553,7 @@
   "withdrawRefund": "申请退款",
   "contract_had_stop": "节点已结束",
   "contract_had_expired": "节点已到期",
-  "create_contract_only_one_hint": "• 一个地址同一时间只能创建一个节点。节点完成后，该地址才可创建新节点。",
+  "create_contract_only_one_hint": "• 同一个地址同一周期只能创建发起一个节点，节点到期后，该地址才可创建新节点。",
   "contract_running": "节点运行中",
   "check_is_create_contract_hint": "你已有一个创建节点的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
@@ -575,7 +574,7 @@
   "no_pengding_node_contract_hint": "没有推荐抵押节点\n您可以创建节点",
   "delegation_full_will_active_hint": "抵押已满，即将启动",
   "expire_date": "期满可提",
-  "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}节点，邀请你前往围观！",
+  "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安【{nodeName}】节点，邀请你前往围观！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
   "contract_launch_fail_please_get_back": "节点启动失败，请申请退款",
@@ -636,7 +635,6 @@
   "not_allow_to_collect_in_pending_state_hint": "该状态下不能提币",
   "delegator_not_exist_hint": "代理人不存在",
   "not_time_to_collect_hint": "未达到提取收益的时间",
-  "cannot_fint_wallet": "找不到本地钱包",
   "warning_no_sceenshot": "请勿截屏分享和存储，这将可能被第三方恶意软件收集，造成资产损失",
   "no_screenshot_dialog_confirm": "知道了",
   "no_screenshot_dialog_cancel": "取消",
@@ -667,17 +665,12 @@
   "in_progress": "进行中...",
   "node_not_create_by_app_withdraw_fail": "该节点并非创建于{app_name}，提取失败",
   "not_exceed_remain_share": "不能超过剩余份额",
-  "share_contract": "分享合约",
   "scan_qr_code_detail": "扫描二维码查看详情",
-  "latest_boot_node": "最新启动节点",
-  "see_more": "查看更多",
   "show_qr_code": "显示二维码",
   "legal_address_starting_1_or_bc_or_3": "请输入1、bc、或3开头的合法接收者地址",
-  "save_update": "保存更新",
   "wallet_address_copied": "钱包地址已复制",
   "wallet_address": "钱包地址",
   "face_fingerprint_password": "面容/指纹与密码",
-  "update_success": "更新成功",
   "update_error": "更新出错",
   "has_unconfirm_btc_wait": "你有未确认的比特币转账，请稍后再试！",
   "pending": "确认中...",
@@ -838,13 +831,12 @@
   "delete_wallet": "删除钱包",
   "bio_auth_title_face": "请验证面容",
   "bio_auth_title_fingerprint": "请验证指纹",
-  "indoor": "室內",
+  "indoor": "室内",
   "most": "最多",
   "ps_gas_hint": "PS: 为避免转账失败，系统默认GAS值偏大，最终以实际链上GAS扣除量为准。",
   "verify_location_hint": "缩放、移动地图选定地点位置",
   "please_edit_location_hint": "请编辑所在地图位置",
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
-  "net_error_hint": "网络错误",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
   "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
   "kline_period_15min": "15分钟",
@@ -858,7 +850,6 @@
   "kline_period_1mon": "1月",
   "kline_period_depth": "深度图",
   "kline_period_more": "更多",
-  "kline_24h_high": "高",
   "kline_24h_low": "低",
   "kline_24h_high": "高",
   "kline_state_main": "主图",
@@ -1008,7 +999,6 @@
   "wallet_name_do_not_contain_space": "请勿包含空格",
   "exchange_change_wallet": "更换钱包",
   "exchange_logout": "退出登录",
-  "exchange_logout_hint": "您将要退出授权状态，确定要退出吗？",
   "net_error_hint": "网络错误",
   "atlas_current_age": "当前纪元",
   "block_height": "区块高度",
@@ -1079,7 +1069,7 @@
   "msg_edit_atlas": "编辑Atlas",
   "msg_re_delegation": "复抵押",
   "msg_cancel_re_delegation": "取消复抵押",
-  "msg_collect_re_delegation_reward": "提出块奖励",
+  "msg_collect_re_delegation_reward": "代领出块奖励",
   "msg_create_map3": "创建Map3节点",
   "msg_collect_micro_staking_rewards" :"提微抵押奖励",
   "msg_renew_map3": "下期预设",
@@ -1301,5 +1291,6 @@
   "atlas_node_more_max_delegation": "Atlas节点总抵押量大于允许最大抵押量",
   "no_balance_undelegate": "申请取消复抵押的金额大于余额",
   "atlas_creator_delegation_little": "Atlas创建者抵押金额太低",
-  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
+  "about_atlas_node": "Atlas consensus node"
 }
