--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -95,7 +95,6 @@
   "foods": "美食",
   "hotel": "酒店",
   "attraction": "景點",
-  "parking": "停車場",
   "gas_station": "加油站",
   "bank": "銀行",
   "supermarket": "超市",
@@ -502,7 +501,6 @@
   "expected_output_hyn": "預期產出(HYN)",
   "create_time": "創建時間",
   "can_withdraw_fifty_reward": "可提50%獎勵",
-  "expire_date": "到期時間",
   "extract_time": "提取時間",
   "extracting": "提取中...",
   "exceed_the_limit": "超過限制",
@@ -575,6 +573,7 @@
   "your_last_output_to_contract_func": "妳的最新提取：{input}, {task_pending}",
   "no_pengding_node_contract_hint": "沒有待啟動的節點合約\n您可以創建合約",
   "delegation_full_will_active_hint": "抵押已滿，即將啟動",
+  "expire_date": "到期時間",
   "contract_share_content": "\"{who}\"在{appName}上發現了海伯利安{nodeName}合約，邀請妳前往圍觀！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
@@ -636,7 +635,6 @@
   "not_allow_to_collect_in_pending_state_hint": "該狀態下不能提幣",
   "delegator_not_exist_hint": "代理人不存在",
   "not_time_to_collect_hint": "未達到提取收益的時間",
-  "cannot_fint_wallet": "找不到本地錢包",
   "advanced_mode": "高級模式",
   "software_agreement": "軟件協議",
   "save_qr_code": "保存二維碼",
@@ -660,17 +658,12 @@
   "in_progress": "進行中...",
   "node_not_create_by_app_withdraw_fail": "該節點並非創建於{app_name}，提取失敗",
   "not_exceed_remain_share": "不能超過剩余份額",
-  "share_contract": "分享合約",
   "scan_qr_code_detail": "掃描二維碼查看詳情",
-  "latest_boot_node": "最新啟動節點",
-  "see_more": "查看更多",
   "show_qr_code": "顯示二維碼",
   "legal_address_starting_1_or_bc_or_3": "請輸入1、bc、或3開頭的合法接收者地址",
-  "save_update": "保存更新",
   "wallet_address_copied": "錢包地址已復制",
   "wallet_address": "錢包地址",
   "face_fingerprint_password": "面容/指紋與密碼",
-  "update_success": "更新成功",
   "update_error": "更新出錯",
   "has_unconfirm_btc_wait": "妳有未確認的比特幣轉賬，請稍後再試！",
   "pending": "確認中...",
@@ -837,7 +830,6 @@
   "verify_location_hint": "縮放、移動地圖選定地點位置",
   "please_edit_location_hint": "請編輯所在地圖位置",
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
-  "net_error_hint": "網絡錯誤",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
   "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
   "kline_period_15min": "15分鐘",
@@ -851,7 +843,6 @@
   "kline_period_1mon": "1月",
   "kline_period_depth": "深度圖",
   "kline_period_more": "更多",
-  "kline_24h_high": "高",
   "kline_24h_low": "低",
   "kline_24h_high": "高",
   "kline_state_main": "主圖",
@@ -1000,7 +991,6 @@
   "wallet_name_do_not_contain_space": "請勿包含空格",
   "exchange_change_wallet": "更換錢包",
   "exchange_logout": "退出登錄",
-  "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？",
   "net_error_hint": "網絡錯誤",
   "atlas_current_age": "當前紀元",
   "block_height": "區塊高度",
@@ -1023,6 +1013,7 @@
   "important_hint": "重要提示",
   "got_it": "知道了",
   "wallet_show_atlas_alert": "HYN主鏈幣已上線，請將HYN ERC20於(北京時間 2020.11.02之前）映射為主鏈幣，無法在未支持HYN主網的交易所或者錢包充提交易，之後HYN ERC20變為無效幣！",
+  "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？",
   "bio_auth_expired_hint": "生物識別已過期，請輸入密碼",
   "map3_main_page_title": "Map3地圖服務節點",
   "dex_account_error": "數據異常",
@@ -1070,7 +1061,7 @@
   "msg_edit_atlas": "編輯Atlas",
   "msg_re_delegation": "復抵押",
   "msg_cancel_re_delegation": "取消復抵押",
-  "msg_collect_re_delegation_reward": "提出塊獎勵",
+  "msg_collect_re_delegation_reward": "代領出塊獎勵",
   "msg_create_map3": "創建Map3節點",
   "msg_collect_micro_staking_rewards" :"提微抵押獎勵",
   "msg_renew_map3": "下期預設",
@@ -1292,5 +1283,6 @@
   "atlas_node_more_max_delegation": "Atlas节点总抵押量大于允许最大抵押量",
   "no_balance_undelegate": "申请取消复抵押的金额大于余额",
   "atlas_creator_delegation_little": "Atlas创建者抵押金额太低",
-  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低"
+  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
+  "about_atlas_node": "Atlas consensus node"
 }
